<resources>
    <string name="app_name">My Application111</string>
    <string name="quiz">QUIZ\n</string>
    <string name="vampire_diaries">Vampire Diaries</string>
    <string name="btn1">Начать Quiz</string>
    <string name="btn2">Авторы</string>
    <string name="todo">TODO</string>
    <string name="Q1">Кто является создателем дневников, которые дали название сериалу?</string>
    <string name="ans1">Елена Гилберт</string>
    <string name="ans2">Стефан Сальваторе</string>
    <string name="ans3">Деймон Сальваторе</string>
    <string name="ans4">Кэтрин Пирс</string>
    <string name="next">Следующий вопрос</string>
    <string name="quiz_start">Начать Quiz</string>
    <string name="auth">Авторы приложения</string>
    <string name="sozd">Создание приложения, проектирование, разработка и дизайн:</string>
    <string name="gub_pol">Губанова Полина</string>
    <string name="svyazz">Связаться с автором:</string>
    <string name="goback">На главный экран</string>
    <string name="end">Завершить Quiz</string>
    <string name="again">Попробовать снова</string>
    <string name="toresult">Перейти к результатам</string>
    <string name="Q5">Как зовут этого героя сериала?</string>
    <string name="ans4_5">Деймон Сальваторе</string>
    <string name="ans3_5">Стефан Сальваторе</string>
    <string name="ans2_5">Джереми Гилберт</string>
    <string name="ans1_5">Мэтт Донован</string>
    <string name="Q7">Кто подарил Кэролайн Форбс этот рисунок?</string>
    <string name="ans1_7">Стефан Сальваторе</string>
    <string name="ans2_7">Тайлер Локвуд</string>
    <string name="ans3_7">Клаус Майклсон</string>
    <string name="ans4_7">Деймон Сальваторе</string>
    <string name="Q3">Во время какого праздника проводится конкурс</string>
    <string name="Q_3">Во время какого праздника проводится конкурс Мисс Мистик Фолс?</string>
    <string name="ans4_3">День Основателей</string>
    <string name="ans1_2">Клаус Майклсон</string>
    <string name="ans2_2">Элайджа Майклсон</string>
    <string name="ans3_2">Кол Майклсон</string>
    <string name="ans4_2">Хенрик Майклсон</string>
    <string name="ans2_4">Лекси Брэнсон</string>
    <string name="ans1_4">Кэролайн Форбс</string>
    <string name="ans3_4">Ребекка Майклсон</string>
    <string name="ans1_8">Елена сказала, что любит Стефана</string>
    <string name="ans2_8">Они поцеловались</string>
    <string name="ans3_8">Деймон заставил её забыть</string>
    <string name="ans4_8">Елена призналась во взаимности</string>
    <string name="Q8">Что произошло, когда Дэймон впервые сказал Елене, что любит ее?</string>
    <string name="ans4_6">Джереми Гилберт</string>
    <string name="ans3_6">Мэтт Донован</string>
    <string name="ans2_6">Тайлер Локвуд</string>
    <string name="ans1_6">Деймон Сальваторе</string>
    <string name="Q33">Что происходит с вампиром при попадании солнечного света без кольца защиты?</string>
    <string name="ans2_3">Он превращается в пепел</string>
    <string name="ans1_3">Его кожа становится прозрачной</string>
    <string name="ans3_3">Ничего не происходит</string>
    <string name="ans4_33">Вампир превращается в оборотня</string>
    <string name="Q9">В какой год переносятся Деймон и Бонни в 6 сезоне?</string>
    <string name="ans1_9">1994</string>
    <string name="ans2_9">2000</string>
    <string name="ans3_9">1985</string>
    <string name="ans4_9">1920</string>
    <string name="Q10">С кем Деймон был в заточении 5 лет?</string>
    <string name="ans1_10">Кэтрин Пирс</string>
    <string name="ans2_10">Тайлер Локвуд</string>
    <string name="ans3_10">Энзо Сент-Джон</string>
    <string name="ans4_10">Коннор Джордан</string>
    <string name="result">Результат</string>
    <string name="Q4">Как звали близкую подругу Стефана, которая была знакома с ним ещё в 1920-х?</string>
    <string name="ans4_55">Бонни Беннетт</string>
    <string name="Q6">С кем встречалась Бонни Беннетт во втором сезоне?</string>
    <string name="todooo">TODO</string>
    <string name="res">Набрано баллов:</string>
    <string name="congrats">Ты настоящий фанат Дневников Вампира!</string>
    <string name="tg">https://t.me/pobsikpolya</string>
    <string name="graz" />
</resources>