<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgv"
    android:gravity="center"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tv_quiz"
        android:layout_width="139dp"
        android:layout_height="50dp"
        android:fontFamily="@font/quiz"
        android:gravity="center"
        android:text="@string/quiz"
        android:textColor="@color/black"
        android:textSize="44sp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="450dp"
        android:layout_height="99dp"
        android:contentDescription="@string/todo"
        android:gravity="center"
        android:src="@drawable/name" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="493dp"
        android:layout_height="292dp"
        android:contentDescription="@string/todo"
        android:layout_marginBottom="27dp"
        android:gravity="center"
        android:src="@drawable/res" />

    <androidx.cardview.widget.CardView
        android:layout_width="359dp"
        android:layout_height="153dp"
        android:layout_marginBottom="27dp"
        android:background="@color/black"
        app:cardCornerRadius="190dp"
        app:cardElevation="5dp">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="27dp"
            android:fontFamily="@font/gothic"
            android:gravity="center"
            android:text="@string/result"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/gothic"
            android:gravity="center"
            android:text="@string/res"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/congrats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="97dp"
            android:fontFamily="@font/gothic"
            android:gravity="center"
            android:text="@string/graz"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"/>

    <Button
        android:id="@+id/bt1"
        android:layout_width="275dp"
        android:layout_height="58dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/button"
        android:text="@string/end"
        android:textSize="23sp"
        android:textColor="@color/white"
        android:fontFamily="@font/gothic"
        android:textAllCaps="false"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/bt2"
        android:layout_width="275dp"
        android:layout_height="58dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="@string/again"
        android:textSize="23sp"
        android:textColor="@color/white"
        android:fontFamily="@font/gothic"
        android:textAllCaps="false"
        android:textStyle="bold"/>
</LinearLayout>